empty post modification

--- a/blog/templates/webpage/sample.html
+++ b/blog/templates/webpage/sample.html
@@ -101,6 +101,13 @@
     <div class="container carousel-inner no-padding">
 
       <div class="carousel-item active">
+           {% if product|length < 1 %}
+          {% if user.is_authenticated %}
+          No posts yet .. <a href="{% url 'Addpostform' %}"> Add Post</a>
+          {% else %}
+          no posts yet .. <a href="{% url 'login' %}"> log in </a> to add recipes
+          {% endif %}
+          {% else %}
 
 
 
@@ -122,6 +129,7 @@
         {% endif %}
 
         {% endfor %}
+        {% endif %}
     </div>
 
  <a class="carousel-control-prev " href="#demo" data-slide="prev">
@@ -183,6 +191,13 @@
             </div>
         </div>
      <div class="row no-gutters border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 my-4 position-relative">
+         {% if allposts|length < 1 %}
+          {% if user.is_authenticated %}
+          No posts yet .. <a href="{% url 'Addpostform' %}"> Add Post</a>
+          {% else %}
+          no posts yet .. <a href="{% url 'login' %}"> log in </a> to add recipes
+          {% endif %}
+          {% else %}
     {% for post in allPosts %}
 
 
@@ -216,6 +231,7 @@
 
 
         {% endfor %}
+         {% endif %}
 
     </div>
 </div>
