--- a/blog/templates/blog/posts.html
+++ b/blog/templates/blog/posts.html
@@ -33,6 +33,13 @@
 <div class="container my-3">
     <h2>Recently Added Recipes </h2>
     <div class="row">
+         {% if allPosts|length < 1 %}
+          {% if user.is_authenticated %}
+          No posts yet .. <a href="{% url 'Addpostform' %}"> Add Post</a>
+          {% else %}
+          no posts yet .. <a href="{% url 'login' %}"> log in </a> to add recipes
+          {% endif %}
+          {% else %}
     {% for post in allPosts %}
 
 <div class="col-md-6 pt-2">
@@ -52,6 +59,7 @@
     </div>
 
 {% endfor %}
+        {% endif %}
 
 </div>
 
