--- a/blog/templates/webpage/profile.html
+++ b/blog/templates/webpage/profile.html
@@ -89,7 +89,7 @@ border: 2px solid #7F00FF;
       <div class="card-container">
          <div class="upper-container">
             <div class="image-container">
-               <img src="{% static 'images/drinks.jpeg' %}" />
+               <img src="{{user.profile_pic}}" />
             </div>
          </div>
          <div class="lower-container">
@@ -108,10 +108,14 @@ border: 2px solid #7F00FF;
          </div>
       </div>
 
+  <div class="col-md-9">
 
+
+  </div>
 </div>
 
 
-   </div>
+
+
 
 {% endblock %}
